@@ -1,13 +1,9 @@
 package net.hamnaberg.json;
 
-import javaslang.collection.List;
-import javaslang.control.Option;
 import org.junit.Test;
 
 import java.math.BigDecimal;
 import java.util.*;
-import java.util.function.BiFunction;
-import java.util.function.Function;
 import java.util.stream.Stream;
 
 import static org.junit.Assert.*;
@@ -70,22 +66,20 @@ public class JsonTest {
         assertEquals(Json.jBoolean(true), allTheThings.headOption().get());
         Json.JArray empty = Json.jEmptyArray();
         Json.JArray notEmpty = empty.append(Json.jString("Hello"));
-        Json.JArray notEmpty2 = empty.append(Json.jString("Hello")).prepend(Json.jBoolean(false));
-        assertEquals(Json.jArray(Json.jBoolean(false), Json.jString("Hello")), notEmpty2);
-        assertEquals(Option.none(), empty.headOption());
+        assertEquals(Optional.empty(), empty.headOption());
         assertEquals(0, empty.size());
         assertEquals(1, notEmpty.size());
-        assertEquals(Option.of(Json.jString("Hello")), notEmpty.headOption());
-        assertEquals(1, notEmpty.getListAsStrings().length());
-        assertEquals(0, notEmpty.getListAsObjects().length());
-        assertEquals(0, notEmpty.getListAsBigDecimals().length());
-        assertEquals(1, allTheThings.getListAsBigDecimals().length());
+        assertEquals(Optional.of(Json.jString("Hello")), notEmpty.headOption());
+        assertEquals(1, notEmpty.getListAsStrings().size());
+        assertEquals(0, notEmpty.getListAsObjects().size());
+        assertEquals(0, notEmpty.getListAsBigDecimals().size());
+        assertEquals(1, allTheThings.getListAsBigDecimals().size());
 
         Json.JArray remove = allTheThings.remove(2);
         assertEquals(7, allTheThings.size());
         assertEquals(6, remove.size());
-        assertEquals(3, notEmpty2.insert(1, Json.jArray(List.range(1, 10).map(Json::jNumber))).size());
-        assertEquals(11L, Stream.concat(notEmpty2.stream(), Json.jArray(List.range(1, 10).map(Json::jNumber)).stream()).count());
+        assertEquals(2, notEmpty.insert(1, Json.jArray(jsonRrange(1, 10))).size());
+        assertEquals(11L, Stream.concat(notEmpty.stream(), Json.jArray(jsonRrange(1, 10)).stream()).count());
     }
 
     @Test
@@ -101,7 +95,7 @@ public class JsonTest {
         assertFalse(Json.jEmptyObject().containsKey("Hello"));
         assertTrue(single.containsKey("k"));
         assertTrue(single.containsValue(Json.jNumber(23)));
-        assertEquals(single.mapToList(this::entry), List.of(entry("k", Json.jNumber(23))));
+        assertEquals(single.mapToList(this::entry), Collections.singletonList(entry("k", Json.jNumber(23))));
         assertEquals(single.put("v", Json.jEmptyArray()), Json.jObject(new HashMap<String, Json.JValue>() {{
             put("k", Json.jNumber(23));
             put("v", Json.jEmptyArray());
@@ -110,5 +104,13 @@ public class JsonTest {
 
     public <K, V> Map.Entry<K, V> entry(K k, V v) {
         return new AbstractMap.SimpleImmutableEntry<>(k, v);
+    }
+
+    private List<Json.JValue> jsonRrange(int start, int end) {
+        ArrayList<Json.JValue> list = new ArrayList<>();
+        for (int i = start; i <= end; i++) {
+            list.add(Json.jNumber(i));
+        }
+        return list;
     }
 }
